# ENCE464_advanced_computing_project

./: .gitignore  464_assignment_2.sln  464_assignment_2.vcxproj  CMakeLists.txt  Makefile  O3_flags.txt  O3_flags_501.txt  O3_flto_flags_501.txt  O3_native  O3_native2.txt  O3_native4.txt  O3_native_jk_swap  O3_native_new_build  O3_native_vectors  O3_native_vectors.txt  Ofast_flags_501.txt  PC1_2.txt  PC1_3.txt  PC1test  PC2test  cachegrind_vector.txt  calc.h  calc_avx2.cpp  calc_avx512.cpp  calc_scalar.cpp  cg_out.txt  flto.txt  fsched_load.txt  funroll_new_build  jk_swap.txt  main.cpp  no_flags.txt  perf.data.old  plot.py  poisson.cpp  poisson.h  poisson_mt.cpp  poisson_mt.h  poisson_multithread.cpp  poisson_multithread.h  (+7 more)
Old_tests/: O3_GPT_flags  O3_GPT_flags_501.txt  O3_GPT_native_flags  O3_GPT_native_flags_501.txt  O3_GPT_native_flags_colapse_501.txt  O3_flags  O3_flags_701.txt  O3_flags_901.txt  O3_flto_flags  Ofast_flags  Ofast_flags_901.txt
PC1/: O3_PC1test  PC1.txt  cachegrind.txt  main.cpp.gcov  perf.data  stdlib-float.h.gcov  stdlib.h.gcov  test-program  testing-program  testing-program-main.gcda  testing-program-main.gcno  testing-program-optimised  testing-program-optimised-main.gcda  testing-program-optimised-main.gcno
PC2/: PC2_1.txt  PC2_2.txt  PC2_3.txt  cachegrind.txt  pc2.txt
doc/lab1-threading/demos/: #threads.c#  .#threads.c
doc/lab1-threading/lab/: count_numbers.c
implementations/: poisson.cpp  poisson_mt.cpp  poisson_multithread.h  poisson_r2.c  poisson_r2.cpp  poisson_r2.h
include/: getopt.c  getopt.h
more tests/: O3_native.txt  O3_native3.txt  fast_math.txt  fast_math_new_build  flto_new_build  fsched_spec_new_build  new_build
thread_pool/: thread_pool.h
